<resources>
    <string name="app_name">AppGym</string>
    <!--    Title's Fragment-->
    <string name="title_web_content">Web Content</string>
    <string name="title_routine">Rutina</string>
    <string name="title_home">Inicio</string>
    <string name="title_profile">Perfil</string>
    <string name="title_chat">Chat</string>
    <string name="title_info_routine">Rutinas</string>
    <string name="title_detail_routine">Detalles Rutina</string>
    <string name="title_detail_historial">Detalles Entrenamiento</string>
    <string name="title_historial">Historial</string>
    <string name="title_new_routine">Nueva Rutina</string>
    <string name="title_new_history">Nuevo Entreno</string>
    <string name="log_in">Log In</string>
    <string name="sign_uo">Sign Up</string>
    <!--    Menu-->
    <string name="info">Información</string>
    <string name="historial">Entrenamientos</string>
    <string name="remove">Eliminar</string>
    <string name="save_historial">Guardar Entreno</string>
    <!--    Texts-->
    <string name="text_routine">Rutinas</string>
    <string name="text_historial">Entrenamientos</string>
    <string name="email">Email</string>
    <string name="height">Altura (cm)</string>
    <string name="weight">Peso (kg)</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="hint_nombre_ejercicio">Nombre Ejercicio</string>
    <string name="hint_nombre_rutina">Nombre Rutina</string>
    <string name="new_ejercicio">Añadir Ejercicio</string>
    <string name="create_routine">Guardar Rutina</string>
    <string name="num_series">Nº Serie</string>
    <string name="repeticiones">Repeticiones</string>
</resources>